[gd_scene load_steps=7 format=3 uid="uid://b3ua4gxcip1as"]

[ext_resource type="Script" path="res://src/environment/pedestal/pedestal.gd" id="1_o5vfj"]

[sub_resource type="CylinderShape3D" id="1"]
height = 6.0
radius = 7.0

[sub_resource type="StandardMaterial3D" id="2"]

[sub_resource type="CylinderMesh" id="3"]
material = SubResource("2")
top_radius = 0.2
bottom_radius = 0.2
height = 2.5

[sub_resource type="BoxMesh" id="5"]
size = Vector3(1, 0.3, 1)

[sub_resource type="CylinderShape3D" id="4"]
height = 3.0
radius = 0.2

[node name="Pedestal" type="Area3D"]
collision_layer = 2
script = ExtResource("1_o5vfj")

[node name="AreaCollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.96664, 0)
shape = SubResource("1")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 2

[node name="BaseMesh" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("3")

[node name="TopMesh" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(-3.35152e-08, -2.80609e-08, -1, -0.641958, 0.76674, 0, 0.76674, 0.641958, -4.37114e-08, 0, 1.49638, 0)
mesh = SubResource("5")

[node name="MeshCollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("4")

[node name="Label3D" type="Label3D" parent="StaticBody3D"]
transform = Transform3D(0.001, 0, 0, 0, 0.001, 0, 0, 0, 0.001, 0, 2.27889, 0)
pixel_size = 0.001
billboard = 2
text = "!"
font_size = 1500
outline_size = 24

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
